# h6x-Internship

./: .gitignore  LICENSE  README.md  rvizplugin.repos  setup.bash
docs/: README.md  gazebo_tutorial.md  part2.md  part3.md  part4.md  part5.md  part6.md  score.md
h6x_internship_gazebo/: CMakeLists.txt  package.xml
h6x_internship_gazebo/launch/: world.launch.py
h6x_internship_gazebo/models/env_harvestx/: model.config  model.sdf
h6x_internship_gazebo/models/env_harvestx/materials/: test_texture.material
h6x_internship_gazebo/models/env_line_flooring/: model.config  model.sdf
h6x_internship_gazebo/models/goal_sign/: model-1_4.sdf
h6x_internship_gazebo/models/goal_sign/materials/scripts/: goal_sign.material
h6x_internship_gazebo/models/harvestx_cube/: model.sdf
h6x_internship_gazebo/models/harvestx_cube/materials/scripts/: textures.material
h6x_internship_gazebo/models/line_robot/: model.sdf
h6x_internship_gazebo/models/line_robot2/: model.config  model.sdf
h6x_internship_gazebo/models/line_robot2/materials/scripts/: textures.material
h6x_internship_gazebo/models/number1/: model.sdf
h6x_internship_gazebo/models/number2/: model.sdf
h6x_internship_gazebo/models/number3/: model.sdf
h6x_internship_gazebo/models/number4/: model.sdf
h6x_internship_gazebo/models/number5/: model.sdf
h6x_internship_gazebo/models/number6/: model.sdf
h6x_internship_gazebo/models/number7/: model.sdf
h6x_internship_gazebo/models/number8/: model.sdf
h6x_internship_gazebo/models/number9/: model.sdf
h6x_internship_gazebo/models/ray_point/: model.config  model.sdf
h6x_internship_gazebo/rviz/: line_trace.rviz
h6x_internship_gazebo/src/: diff_drive_controller_plugin.cpp  diff_drive_controller_plugin.hpp  gazebo_ros_target_point.cpp  gazebo_ros_target_point.hpp
h6x_internship_gazebo/src/judge/: game_define.hpp  game_master.cpp  game_master.hpp  judge_courseout.cpp  judge_courseout.hpp  judge_deviation.cpp  judge_deviation.hpp  judge_goal.cpp  judge_goal.hpp  send_log.cpp  send_log.hpp
h6x_internship_gazebo/worlds/: env_line_room.world
line_trace_ros2/: CMakeLists.txt  package.xml
line_trace_ros2/launch/: linetrace.launch.py
line_trace_ros2/models/env_line_flooring/materials/: test_texture.material
line_trace_ros2/models/goal_sign/: model-1_3.sdf  model.sdf
line_trace_ros2/models/harvestx_cube/: model.config  model.sdf
line_trace_ros2/models/line_robot/: model.config
line_trace_ros2/models/line_robot2/: model.sdf
line_trace_ros2/models/line_robot2/meshes/: car.dae
line_trace_ros2/models/number1/meshes/: number.dae
line_trace_ros2/models/number8/: model.sdf
line_trace_ros2/worlds/: env_line_room.world
